@@ -1,3 +1,6 @@
+2023-06-27 Hannes von Haugwitz <hannes@vonhaugwitz.com>
+	* Fix child directory proccessing on equal match (closes: #154)
+
 2023-06-12 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Add missing ')' to log message
 	* Fix handling of extended attributes on symlinks (closes: #156)
